--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "^14.2.15",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "next": "^14.2.15"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
